video text alignment fixes

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -561,7 +561,7 @@ h1{color: #a3a3a3;font-family: 'SabonLT-Roman';font-size: 4.8em;font-weight: nor
 .videos .section_one{margin-right:36px;}
 .videos .section_one:last-child{margin:0px;}
 .videos .section_one.last-video{margin:0px;}
-.section_one a span.play{position:absolute;font-family: 'SabonLT-Roman';font-size: 2em;font-weight:normal;margin: 0;font-style: italic;left:28%;top:40%;color: #fff;}
+.section_one a span.play{color: #FFFFFF;font-family: 'SabonLT-Roman';font-size: 2em;font-style: italic;font-weight: normal;left: 50%;margin: -2px 0 0 -62px;position: absolute;top: 50%;}
 .container.main #work-with-us.page .gallery_join{position: relative;height:auto;float:left;width: 100%;}
 .page_5 .maisons_head h2{text-align :center;margin-bottom:0px;}
 #wrapper .page_5 .maisons_head h2{font-size:4.8em;}
